Add landing page according to the date

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "next": "9.5.2",
     "react": "16.13.1",
+    "react-countdown": "^2.2.1",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
