--- a/package.json
+++ b/package.json
@@ -25,10 +25,16 @@
   },
   "homepage": "https://github.com/taylorbryant/next-starter-tailwind#readme",
   "dependencies": {
+    "classnames": "^2.2.6",
     "next": "9.5.2",
+    "next-auth": "^3.1.0",
+    "pg": "^8.3.3",
+    "pg-hstore": "^2.3.3",
     "react": "16.13.1",
     "react-countdown": "^2.2.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "sequelize": "^6.3.5",
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {
     "autoprefixer": "9.8.6",
