--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
+    "@types/react": "^16.9.49",
     "autoprefixer": "9.8.6",
     "rustywind": "0.6.6",
-    "tailwindcss": "1.7.6"
+    "tailwindcss": "1.7.6",
+    "typescript": "^4.0.2"
   }
 }
