--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-countdown": "^2.2.1",
     "react-dom": "16.13.1",
     "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0",
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
