--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "knex": "^0.21.5",
     "next": "9.5.2",
     "next-auth": "^3.1.0",
+    "next-seo": "^4.7.3",
     "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
     "react": "16.13.1",
