--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,5 @@ DB_USERNAME=postgres
 DB_PASSWORD=
 DB_NAME=modtoberfest
 
+DISCORD_WEBHOOK_URL=<remove to remove logs to discord>
 NEXTAUTH_URL=http://localhost:3000
