Use remote API to fetch data

--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,7 @@ DB_USERNAME=postgres
 DB_PASSWORD=
 DB_NAME=modtoberfest
 
+API_HOST=http://localhost:3001 
+
 DISCORD_WEBHOOK_URL=<remove to remove logs to discord>
 NEXTAUTH_URL=http://localhost:3000
