--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "analyze:tailwind-css-class-order": "rustywind --dry-run .",
     "analyze": "npm run analyze:tailwind-css-class-order",
+    "setupdb" : "knex migrate:latest",
     "fix:tailwind-css-class-order": "rustywind --write .",
     "fix": "npm run fix:tailwind-css-class-order",
     "dev": "next",
